Translate in Task show page is not complete (right of the page and due date),Fix #1225
Former-commit-id: 1fa1bef42fd701366dc706094ebc7da9b45e7677 [formerly 979721cc8261ee992012792cfa64c353fa1b14f5] [formerly 9ca52194d0782a8f51596f9e53053b2f848c6243 [formerly ecc83a183dd6eea2c5efec0f1af9cc6748ed69b5]]
Former-commit-id: 7ec1d15886824adb2afbc30e99f12bd1e61430ff [formerly 4cbd7d8ba957d7d792182d4975cb6ae97217debd]
Former-commit-id: 6b6d3610c1796b74d9941553193078747345f92e

--- a/locale/ar/LC_MESSAGES/messages.po
+++ b/locale/ar/LC_MESSAGES/messages.po
@@ -4150,3 +4150,21 @@ msgstr "معلومات حول الموعد"
 
 msgid "Calendar"
 msgstr "رزنامة"
+
+msgid "Add Tasks directly from Gmail"
+msgstr "اضف المهام مباشرة من جوجل"
+
+msgid "Install chrome extension"
+msgstr "قم بتثبيت تمديد كروم"
+
+msgid "+ Add new colaborator"
+msgstr "اضف مشارك"
+
+msgid "Add a comment"
+msgstr "اضف تعليقك"
+
+msgid "Due date"
+msgstr "تاريخ الاستحقاق"
+
+msgid "Due Date"
+msgstr "تاريخ الاستحقاق"
