working on translate
Former-commit-id: ccb03d08fb1c3dfd47f725f203e55917fdb11b91 [formerly 69ac3ef98d297ff4b6a9ea354233e61de79124c0] [formerly b80dd46a0621b13a4362019174c439598e919d7a [formerly fff92f03a6ecbc1e799857beb356b7d481712ed4]]
Former-commit-id: 2863ef0e3f3f8c70739d5e9c554f89fa0cc73a67 [formerly 332595aadfd7ce15dfb98f7b30bd28e57ffd1a21]
Former-commit-id: 567b9c2057690073381e26023572c0db7520a06a

--- a/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/locale/fr_FR/LC_MESSAGES/messages.po
@@ -1924,7 +1924,7 @@ msgid ""
 "Each contact gets a page in i/oGrow. You and your co-workers can add "
 "notes from calls,conversations, meetings, or any other historic "
 "information about this person."
-msgstr "Chaque contact reçoit une page i / oGrow. Vous et vos collègues pouvez ajouter des notes à partir des appels, des conversations, des rencontres, ou toute autre information historique au sujet de cette personne."
+msgstr "Chaque contact a une page i / oGrow. Vous et vos collègues pouvent ajouter des notes à partir des appels externes, des conversations, des rencontres, ou toute autre information concernant ce Contact."
 
 #: templates/accounts/account_show.html:506
 #: templates/contacts/contact_show.html:535
@@ -4136,7 +4136,7 @@ msgstr "compétences"
 #:tasks
 
 msgid "Add new user"
-msgstr "Ajouter un nouvel utilisateur"
+msgstr "Ajouter un nouveau utilisateur"
 
 msgid "Created date"
 msgstr "Date de création"
@@ -4182,3 +4182,6 @@ msgstr "Joindre des fichiers"
 
 msgid "Enter a email"
 msgstr "Entrer un email"
+
+msgid "My tasks"
+msgstr "Mes tâches"
