--- a/locale/ar/LC_MESSAGES/messages.po
+++ b/locale/ar/LC_MESSAGES/messages.po
@@ -3543,6 +3543,14 @@ msgstr "احالة الى شريك "
 msgid "Purchased List"
 msgstr "قائمة المشتريات"
 
+msgid "Purchase"
+msgstr "شراء رخصة"
+msgid "Remove user"
+msgstr "حذف مستعمل"
+msgid "Assign licenses"
+msgstr "اسناد رخصة"
+msgid "Unassign licenses"
+msgstr "نزع رخصة"
 #: templates/leads/lead_show.html:21
 msgid "Convert"
 msgstr "تحويل"
@@ -3931,8 +3939,8 @@ msgstr "لم يتم العثور على نتائج، حاول مع مصطلح آ
 #~ msgid "Discovery"
 #~ msgstr "اكتشاف"
 
-#~ msgid "Billing"
-#~ msgstr "الفوترة"
+msgid "Billing"
+msgstr "الفوترة"
 
 #~ msgid "New Topic"
 #~ msgstr "انشئ موضوع"
@@ -4119,8 +4127,8 @@ msgstr "لم يتم العثور على نتائج، حاول مع مصطلح آ
 #~ msgid "Server Name"
 #~ msgstr "اسم الخادم"
 
-#~ msgid "Add new user"
-#~ msgstr "اضف مستخدم جديد"
+msgid "Add new user"
+msgstr "اضف مستخدم جديد"
 
 #~ msgid "Filter by assignee"
 #~ msgstr "نقح بواسطة قائمة التعيينات"
@@ -4170,3 +4178,62 @@ msgstr "لم يتم العثور على نتائج، حاول مع مصطلح آ
 #~ msgid "Due Date"
 #~ msgstr "تاريخ الاستحقاق"
 
+msgid "Now, your customers are talking about topics related to your business on social media. We provide you the right tool to discover them"
+msgstr "تعرف، الزبائن يتحدثون حول المواضيع ذات الصلة لعملك على وسائل الاعلام الاجتماعية. ونحن نقدم لك الأداة المناسبة لاكتشافها"
+msgid "+ Invite Users"
+msgstr "اضف مستعملين +"
+
+msgid "Topics:"
+msgstr "مواضيع:"
+msgid "Choose languages:"
+msgstr "اختر اللغة"
+msgid "Influencers"
+msgstr "المؤثرين"
+msgid "Mark as lead"
+msgstr "اضف لمداخيل البيع"
+msgid "Added to leads..."
+msgstr "تمت الاضافة"
+msgid "Add a Topic"
+msgstr "اضف موضوع"
+msgid "new"
+msgstr ""
+msgid "lead"
+msgstr "مدخل بيع جديد"
+msgid "Add a Tag"
+msgstr "اضف وسم"
+msgid "Add new task: you can  assign it directly with @ and/or add a tag with #"
+msgstr "اضف مهمة جديدة ز باستطاعتك ان تكلف اشخاص بهاته المهمة عن طريق اضافة @"
+msgid " Event"
+msgstr " موعد"
+msgid "Dashboard"
+msgstr "تقارير"
+msgid "Discovery"
+msgstr "اكتشف"
+
+# Relationships
+msgid "Relationships"
+msgstr "ادارة العلاقات"
+
+# Admin Console
+msgid "Admin Console"
+msgstr "الاعدادات"
+msgid "License status"
+msgstr "وضعية الرخصة"
+msgid "Administrator"
+msgstr "مستعمل خاص"
+msgid "users"
+msgstr "مستعمل"
+msgid "licenses"
+msgstr "رخصة"
+msgid "assigned"
+msgstr "اسندت"
+msgid "available"
+msgstr "لم تسند بعد"
+msgid "Licence type"
+msgstr "نوع الرخصة"
+msgid "Expire"
+msgstr "تاريخ الانتهاء"
+msgid "Update your Logo"
+msgstr "حمل علامتك التجارية"
+msgid "Email signature"
+msgstr "توقيع البريد الالكتروني"
