work on translation to portuguese
Former-commit-id: 4d2463758f0c16ef6e1ad6af256fadae60e486ee [formerly 1c82d98632b17e12870d5d742c1e4ef203dfbbd3] [formerly 0ba614506cea62e4ceec421ddbacf25aaa3b208c [formerly 18068ebf29385c6817aee6e14f13eff0019bd4a0]]
Former-commit-id: 0439e72b469bee34094e09070e1e87976e29f4c5 [formerly e1dfa6aa6106f908ac5712f9dc0cac5d6d0bb3cb]
Former-commit-id: 708069aec91ebc42e2871a1072cb9d638d7552ec

--- a/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/locale/fr_FR/LC_MESSAGES/messages.po
@@ -2971,7 +2971,7 @@ msgstr "Étapes d'opportunité"
 #: templates/admin/settings/settings.html:297
 #: templates/admin/settings/settings.html:329
 msgid "Case Status"
-msgstr "État du réclamation"
+msgstr "Statut des réclamation"
 
 #: templates/admin/settings/settings.html:66
 #: templates/admin/settings/settings.html:362
