fix bug on mark as lead
Former-commit-id: f456d770e2151e260a63c26324771fbcdf6b8509 [formerly 0d85390fa1d836df494e01b90f0a55349c521da3] [formerly 0eadc5ad4e848c1f77f263a02c197563d3628a30 [formerly e87d17747bd6fbb52f597a0e07ae6306f80c19b4]]
Former-commit-id: 188c88750c95db1048b89a031df73e4c724b1f5a [formerly 0c2dcc5b5fef614dc29840d08601eba83533cfc4]
Former-commit-id: 64aa939e1243b5f70d6eac9f8d6610e9598c4cd3

--- a/locale/pt_BR/LC_MESSAGES/messages.po
+++ b/locale/pt_BR/LC_MESSAGES/messages.po
@@ -6086,34 +6086,34 @@ msgstr "Resultado da Busca"
 #~ msgid "Priority:"
 #~ msgstr "Prioridade:"
 
-#~ msgid "EAll day"
+#~ msgid "All day"
 #~ msgstr "Dia inteiro"
 
 #~ msgid "My Leads"
 #~ msgstr "Meus Leads"
 
 #~ msgid " New Lead"
-#~ msgstr "Novo Lead"
+msgstr "Novo Lead"
 
-#~ msgid "Create Lead"
-#~ msgstr "Criar Lead"
+msgid "Create Lead"
+msgstr "Criar Lead"
 
-#~ msgid "Convert"
-#~ msgstr "Converter"
+msgid "Convert"
+msgstr "Converter"
 
-#~ msgid "Updated at:"
-#~ msgstr "Atualizado:"
+msgid "Updated at:"
+ msgstr "Atualizado:"
 
-#~ msgid "No results found, try with another term"
-#~ msgstr "Nenhum resultado encontrado, tente um outro termo."
+msgid "No results found, try with another term"
+msgstr "Nenhum resultado encontrado, tente um outro termo."
 
 #~ msgid "Last Name*"
 #~ msgstr "Sobrenome"
 
 # Relationships
-#~ msgid "Relationships"
-#~ msgstr "Relacionamentos"
+ msgid "Relationships"
+ msgstr "Relacionamentos"
 
 # Admin Console
-#~ msgid "Admin Console"
-#~ msgstr "Painel Admin"
+ msgid "Admin Console"
+ msgstr "Painel Admin"
