updgrade language of setting (arabic)
Former-commit-id: 96b0ed5389401d4c2c80131230aa1f411d04f041 [formerly 5181994b44b4dc09220cdcbc8873863ed872b5df] [formerly 680a78d5089e65896546d67563b5fedb9c21a3c2 [formerly 5142a43b4878aaebd6460b394bd5149594a4c1d5]]
Former-commit-id: c6ef8ad078dfa94372aacee93b34d60bc06afa40 [formerly 8ec2bb0746d1e6d67edea153cbaaf74fef1e978c]
Former-commit-id: 4d3d626e2c54fcad9836f976fb7989bb2d967a55

--- a/locale/ar/LC_MESSAGES/messages.po
+++ b/locale/ar/LC_MESSAGES/messages.po
@@ -110,7 +110,7 @@ msgstr "ابحث"
 
 #: templates/base.html:118
 #, fuzzy
-msgid " Invite Team"
+msgid "Invite Team"
 msgstr "دعوة فريق"
 
 #: templates/base.html:156
@@ -4483,7 +4483,7 @@ msgid "Update your Logo"
 msgstr "حمل علامتك التجارية"
 
 #: templates/admin/settings/settings.html:77
-msgid "Email signature"
+msgid "Email Signature"
 msgstr "توقيع البريد الالكتروني"
 
 #: templates/admin/settings/settings.html:83
@@ -4893,7 +4893,7 @@ msgstr "حساب"
 
 #: templates/billing/billing_list.html:81
 msgid "Billing address"
-msgstr ""
+msgstr "عنوان إرسال الفواتير"
 
 #: templates/billing/billing_list.html:88
 #, fuzzy
@@ -6531,4 +6531,175 @@ msgstr "نتائج البحث"
 
 #~ msgid "Last Name*"
 #~ msgstr "اللقب"
+
+''' new Settings interface messages '''
+
+# Company Profile
+ msgid "Company Profile"
+ msgstr "بيانات الشركة"
+
+# Default logo
+ msgid "Default Logo"
+ msgstr "الشعار الافتراضي"
+
+# Custom logo
+ msgid "Custom Logo"
+ msgstr "الشعار الخاص"
+
+# Upload a custom image
+ msgid "Upload a custom image"
+ msgstr "تحميل صورة خاصة"
+
+# image to upload size 1 line
+ msgid "Your custom logo will be displayed for all services in the header"
+ msgstr "سيتم عرض هذا الشعار في جميع الخدمات في أعلى الصفحة"
+
+# image to upload size 2 line
+ msgid "The image file should be in PNG or GIF format, up to 144 x 32 pixels"
+ msgstr "يجب أن يكون امتداد الملف PNG أو GIF الشكل، و بمقاس 144 × 32 بكسل"
+
+# image to upload size 3 line
+ msgid "Uploading a new logo will replace your current one across all iogrow products and for all users"
+ msgstr "الشعار جديد سيحل محل الشعار الحالي في جميع منتجات iogrow ولجميع المستخدمين"
+
+# Your logo here
+ msgid "Your logo here"
+ msgstr "شعارك هنا"
+
+# Choose a file
+ msgid "Choose a file"
+ msgstr "اختر ملف"
+
+ # Signature
+ msgid "Signature"
+ msgstr "توقيع"
+
+# This signature will appear in all mail you send from iogrow
+ msgid "This signature will appear in all mail you send from iogrow"
+ msgstr "سيظهر هذا التوقيع في جميع الرسائل التي ترسلها من iogrow"
+
+# You've connected ioGrow to
+ msgid "You've connected ioGrow to"
+ msgstr "قمت بتوصيل ioGrow ب"
+
+
+# Relationships
+ msgid "Relationships"
+ msgstr "العلاقات"
+
+# licenses bought
+ msgid "licenses bought"
+ msgstr "التراخيص المشترات"
+
+ # assigned licenses
+ msgid "assigned licenses"
+ msgstr "التراخيص التي تم تعيينها"
+
+ # available licenses
+ msgid "available licenses"
+ msgstr "التراخيص المتوفرة"
+
+# Regional Settings
+ msgid "Regional Settings"
+ msgstr "الإعدادات الإقليمية"
+
+# Time zone
+ msgid "Time zone"
+ msgstr "المنطقة الزمنية"
+
+# Date and Time format
+ msgid "Date and Time format"
+ msgstr "صيغة التاريخ الوقت"
+
+# Week starts on
+ msgid "Week starts on"
+ msgstr "يبدأ الأسبوع من يوم"
+
+# Currency
+ msgid "Currency"
+ msgstr "العمله"
+
+# Currency Format
+ msgid "Currency Format"
+ msgstr "صيغة العمله"
+
+# Default
+ msgid "Default"
+ msgstr "افتراضي"
+
+# Regional
+ msgid "Regional"
+ msgstr "إقليمي"
+
+# Actions
+ msgid "Actions"
+ msgstr "إجراءات"
+
+# Leads Status Settings
+ msgid "Leads Status Settings"
+ msgstr "اعدادات وضعية الإمكانية"
+
+# Case Status Settings
+ msgid "Cases Status Settings"
+ msgstr "اعدادات وضعية الحالة"
+
+# Custom Fields Builder
+ msgid "Custom Fields Builder"
+ msgstr ""
+
+# Field label
+ msgid "Field label"
+ msgstr "تسمية الحقل"
+
+# label
+ msgid "Label"
+ msgstr "تسمية"
+
+# Select Type
+ msgid "Select Type"
+ msgstr "اختر نوع"
+
+# Text
+ msgid "Text"
+ msgstr "نص"
+
+# Paragraph Text
+ msgid "Paragraph Text"
+ msgstr "نص الفقرة"
+
+# Multiple choice
+ msgid "Multiple choice"
+ msgstr "اختيار متعددة"
+
+# Multiple choice
+ msgid "Choose from a list"
+ msgstr "اختر من القائمة"
+
+# Field options
+ msgid "Field options"
+ msgstr "خيارات الحقل"
+
+# Are you sure you want to delete the custom field
+ msgid "Are you sure you want to delete the custom field"
+ msgstr "هل أنت متأكد أنك تريد حذف الحقل الخاص"
+
+# Field preview
+ msgid "Field preview"
+ msgstr "معاينة الحقل"
+
+# Field type
+ msgid "Field type"
+ msgstr "نوع الحقل"
+
+# Add new option
+ msgid "Add new option"
+ msgstr "إضافة خيار جديد"
+
+# Empty
+ msgid "Empty"
+ msgstr "فارغ"
+
+# clear
+ msgid "Clear"
+ msgstr "أفرغ"
 
